products cards added

--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -37,9 +37,8 @@
 
 .btn-outline {
   color: var(--primary-1);
-  background-color: var(--primary-4);
+  background-color: transparent;
   border: var(--primary-1) 2px solid;
-  box-shadow: 1px 1px 7px #c4c4c4;
   padding: 8px 25px;
   border-radius: 10px;
 }
