--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -6,12 +6,14 @@
   box-shadow: 0 3px 7px 1px rgb(0 0 0 / 6%), 0 -3px 7px 1px rgb(0 0 0 / 7%);
   grid-gap: 10px;
   padding: 10px;
+  border-radius: 3px;
 }
 
 .product-grid img {
   width: 100px;
   height: 100px;
   object-fit: cover;
+  border-radius: 3px;
 }
 
 .product-grid .fa-times {
@@ -21,6 +23,6 @@
 
 .product-checkout {
   display: grid;
-
+  grid-template-rows: 1fr auto;
   justify-items: flex-end;
 }
