--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -8,6 +8,7 @@
   padding: 10px;
   border-radius: 3px;
   letter-spacing: 0.8px;
+  position: relative;
 }
 
 .product-grid img {
@@ -26,4 +27,18 @@
   display: grid;
   grid-template-rows: 1fr auto;
   justify-items: flex-end;
+}
+
+.product-quantity {
+  position: absolute;
+  background-color: var(--primary-1);
+  bottom: 7%;
+  left: 20%;
+  padding: 2px;
+  font-size: 14px;
+  width: 18px;
+  height: 17px;
+  text-align: center;
+  border-radius: 3px;
+  color: var(--white);
 }
