--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,13 +1,14 @@
 .about-layout {
   display: grid;
-  grid-template-columns: 1fr auto;
+  grid-template-columns: 1fr 1fr;
   padding: 45px 0;
   grid-gap: 34px;
 }
 
 .about-layout img {
-  height: 600px;
+  width: 100%;
   border-radius: 3px;
+  box-shadow: 0 0 15px rgb(0 0 0 / 20%);
 }
 
 .about-layout p {
