--- a/src/css/mediaQueries.css
+++ b/src/css/mediaQueries.css
@@ -45,21 +45,25 @@
     height: unset;
   }
 
+  /* NAVBAR */
+
   .nav-logo {
     display: none;
   }
 
   .nav-logo-mobile {
     display: inline-block !important;
-    width: 20%;
+    width: 16%;
+    margin-left: 12px;
+  }
+
+  a .nav-logo-mobile {
+    width: 53px;
+    margin-left: 9px;
   }
 
   .nav-item a {
     padding: 13px 9px !important;
-  }
-
-  .cta {
-    width: 70px !important;
   }
 
   .navbar ul .nav-item:first-child {
@@ -67,12 +71,14 @@
   }
 
   .btn {
+    padding: 8px 14px !important;
+  }
+  .cta {
+    width: 70px !important;
     padding: 8px 2px !important;
   }
 
   .navbar ul {
     padding: 0 !important;
   }
-
-  /* justify-content: space-between; */
 }
