fixed some queries

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,1 +1,16 @@
-
+@import "index";
+@import "About";
+@import "Button";
+@import "Cart";
+@import "Footer";
+@import "Home";
+@import "Input";
+@import "Navbar";
+@import "OrderComplete";
+@import "Product";
+@import "Products";
+@import "ProductDetailFact";
+@import "ProductDetailInfo";
+@import "ProductDetailNutrition";
+@import "ProductDetails";
+@import "mediaQueries";
