--- a/src/css/Cart.css
+++ b/src/css/Cart.css
@@ -1,7 +1,8 @@
 .cart-layout {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto 1fr;
+
   padding: 45px 0;
   grid-gap: 20px;
   letter-spacing: 0.8px;
