--- a/src/css/mediaQueries.css
+++ b/src/css/mediaQueries.css
@@ -46,6 +46,8 @@
   }
 
   .container {
+    padding: 0px 14px;
+
     padding: 0px 25px;
     height: unset;
   }
@@ -103,8 +105,12 @@
   }
 
   .container {
-    padding: 0px 25px;
+    padding: 0px 14px;
     height: unset;
+  }
+
+  .cart-highlight {
+    font-size: 14px;
   }
 
   /* NAVBAR */
@@ -146,7 +152,7 @@
 
   /* CART */
   .cart-table thead th {
-    font-size: 13px;
+    font-size: 14px;
   }
 
   .payForm p {
